--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,14 @@ buildscript {
 }
 
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'org.jetbrains.dokka'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
+    id 'org.jetbrains.dokka'
+}
 
 android {
     dataBinding {
@@ -71,82 +75,69 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.1.0'
 
     // Core library
-    androidTestImplementation 'androidx.test:core:1.0.0'
+    androidTestImplementation 'androidx.test:core:1.4.0'
 
     //WorkManager
-    def work_version = "2.4.0"
+    def work_version = "2.7.1"
+    //noinspection GradleDependency
     implementation "androidx.work:work-runtime-ktx:$work_version"
     // optional - RxJava2 support
+    //noinspection GradleDependency
     implementation "androidx.work:work-rxjava2:$work_version"
     // optional - GCMNetworkManager support
     implementation "androidx.work:work-gcm:$work_version"
     // optional - Test helpers
     androidTestImplementation "androidx.work:work-testing:$work_version"
 
-    // AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test:rules:1.1.0'
+    //Testing
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // For instrumented tests.
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.41")
+    // ...with Kotlin.
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.41")
+    // For Robolectric tests.
+    testImplementation("com.google.dagger:hilt-android-testing:2.41")
+    // ...with Kotlin.
+    kaptTest("com.google.dagger:hilt-android-compiler:2.41")
 
-    // Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
-    androidTestImplementation 'androidx.test.ext:truth:1.0.0'
-    androidTestImplementation 'com.google.truth:truth:0.42'
-
-    // Espresso dependencies
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-//    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
-//    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
-//    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.1.0'
-//    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
-//    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.1.0'
-//    testImplementation 'junit:junit:4.12'
-
-    // The following Espresso dependency can be either "implementation"
-    // or "androidTestImplementation", depending on whether you want the
-    // dependency to appear on your APK's compile classpath or the test APK
-    // classpath.
-    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
 
 
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
 
     //CardSwipe behaviour
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
 
-    // Dagger dependencies
-    def dagger_version = "2.35.1"
-    implementation "com.google.dagger:dagger:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
-
+    // Hilt - Dependency injection
+    def hilt_version = "2.41"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
     def dagger_assist_version = "0.3.3"
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$dagger_assist_version"
-
-//    implementation "androidx.room:room-runtime:2.2.5"
-//    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    implementation("androidx.hilt:hilt-work:1.0.0")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
 
     // Retrofit
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
-    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 
     // Picasso
     implementation("com.squareup.retrofit2:converter-simplexml:2.9.0") {
@@ -156,6 +147,7 @@ dependencies {
     }
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+
 
 
 
